Fix compile.sh